src/objects/HWS_ServiceFeeDetails__c.object
<CustomObject>
    <description>HWSDDP-24</description>
    <fields>
        <fullName>HWS_BusinessUnit__c</fullName>
        <description>HWSDDP-24</description>
        <formula>HWS_Product__r.CH_Business_Unit__c</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_DamagedHWRepairFee2__c</fullName>
        <description>(22.4) HWS-(HWSDDP-24) Created to store Repair fee</description>
        <label>Damaged HW Repair Fee2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HWS_DamagedHWRepairFee__c</fullName>
        <description>(22.4) HWS-(HWSDDP-24) Created to store Repair fee</description>
        <label>Damaged HW Repair Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HWS_DamagedHWReplacementFee__c</fullName>
        <description>(22.4) HWS-(HWSDDP-24) Created to store Replacement fee</description>
        <label>Damaged HW Replacement Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HWS_DocumentationFee__c</fullName>
        <description>(22.4) HWS-(HWSDDP-24) Created to store DocumentationFee</description>
        <label>Documentation Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HWS_Fee3__c</fullName>
        <description>(22.4) HWS-(HWSDDP-24) Created to store Fee</description>
        <label>HWS Fee3</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HWS_Fee4__c</fullName>
        <description>(22.4) HWS-(HWSDDP-24) Created to store Fee4</description>
        <label>HWS Fee4</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HWS_HWAssessmentFee__c</fullName>
        <description>(22.4) HWS-(HWSDDP-24) Created to store Assessment Fee</description>
        <label>HW Assessment Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HWS_HWUnreturnedPartFee__c</fullName>
        <description>(22.4) HWS-(HWSDDP-24) Created to store UnreturnedPart fee</description>
        <label>HW Unreturned Part Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HWS_OrderCode__c</fullName>
        <description>HWSDDP-24</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_PriceUniqueId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Price Unique Id</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HWS_ProductCode__c</fullName>
        <description>HWSDDP-24</description>
        <formula>HWS_Product__r.ProductCode</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_ProductDescription__c</fullName>
        <description>HWSDDP-24</description>
        <formula>HWS_Product__r.Description</formula>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HWSDDP-24</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.HWS_Valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Fee_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HWS_RepackingHWPackingFee__c</fullName>
        <description>(22.4) HWS-(HWSDDP-24) Created to store Packing Fee</description>
        <label>Repacking HW Packing Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HWS_Status__c</fullName>
        <description>HWSDDP-24</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HWS_SupportedQuoteTypes__c</fullName>
        <description>HWSDDP-24</description>
        <label>Supported Quote Types</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Damaged Part</fullName>
                </value>
                <value>
                    <fullName>Unreturned Part</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HWS_Type__c</fullName>
        <description>HWSDDP-24</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HWS Part</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Fee Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HWS_OrderCode__c</columns>
        <columns>HWS_Product__c</columns>
        <columns>HWS_ProductCode__c</columns>
        <columns>HWS_SupportedQuoteTypes__c</columns>
        <columns>HWS_BusinessUnit__c</columns>
        <columns>HWS_DamagedHWRepairFee__c</columns>
        <columns>HWS_DamagedHWRepairFee2__c</columns>
        <columns>HWS_DamagedHWReplacementFee__c</columns>
        <columns>HWS_DocumentationFee__c</columns>
        <columns>HWS_HWAssessmentFee__c</columns>
        <columns>HWS_RepackingHWPackingFee__c</columns>
        <columns>HWS_HWUnreturnedPartFee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Price_List_View</fullName>
        <columns>NAME</columns>
        <columns>HWS_OrderCode__c</columns>
        <columns>HWS_Product__c</columns>
        <columns>HWS_ProductCode__c</columns>
        <columns>HWS_BusinessUnit__c</columns>
        <columns>HWS_DamagedHWRepairFee__c</columns>
        <columns>HWS_DamagedHWRepairFee2__c</columns>
        <columns>HWS_DamagedHWReplacementFee__c</columns>
        <columns>HWS_DocumentationFee__c</columns>
        <columns>HWS_HWAssessmentFee__c</columns>
        <columns>HWS_RepackingHWPackingFee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HWS_SupportedQuoteTypes__c</field>
            <operation>equals</operation>
            <value>Damaged Part</value>
        </filters>
        <label>Damaged Part Fee List View</label>
    </listViews>
    <listViews>
        <fullName>Unreturned_Part_Price_List_View</fullName>
        <columns>NAME</columns>
        <columns>HWS_OrderCode__c</columns>
        <columns>HWS_Product__c</columns>
        <columns>HWS_ProductCode__c</columns>
        <columns>HWS_BusinessUnit__c</columns>
        <columns>HWS_HWUnreturnedPartFee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HWS_SupportedQuoteTypes__c</field>
            <operation>equals</operation>
            <value>Unreturned Part</value>
        </filters>
        <label>Unreturned Part Fee List View</label>
    </listViews>
    <nameField>
        <displayFormat>SFEE-{00000}</displayFormat>
        <label>Service Fee Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Fee Details</pluralLabel>
    <recordTypes>
        <fullName>HWS_Part_Service_Fee</fullName>
        <active>true</active>
        <description>HWSDDP-24</description>
        <label>HWS Part Service Fee</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>HWS_ValidateFee</fullName>
        <active>true</active>
        <description>HWSDDP-24</description>
        <errorConditionFormula>OR(
INCLUDES (HWS_SupportedQuoteTypes__c, &quot;Damaged Part&quot;) &amp;&amp; isblank (HWS_DamagedHWRepairFee__c),
INCLUDES (HWS_SupportedQuoteTypes__c, &quot;Damaged Part&quot;) &amp;&amp; isblank (HWS_DamagedHWReplacementFee__c),
INCLUDES (HWS_SupportedQuoteTypes__c, &quot;Damaged Part&quot;) &amp;&amp; isblank (HWS_RepackingHWPackingFee__c),
INCLUDES (HWS_SupportedQuoteTypes__c, &quot;Damaged Part&quot;) &amp;&amp; isblank (HWS_HWAssessmentFee__c),
INCLUDES (HWS_SupportedQuoteTypes__c, &quot;Damaged Part&quot;) &amp;&amp; isblank (HWS_DocumentationFee__c),

INCLUDES(HWS_SupportedQuoteTypes__c, &quot;Unreturned Part&quot;) &amp;&amp; isblank (HWS_HWUnreturnedPartFee__c)
)</errorConditionFormula>
        <errorMessage>For Damaged Part quote type, do not populate HW Unreturned Part Fee.

For Unreturned Part quote type, do not populate fields related to Damaged HW fees.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HWS_ValidateProduct</fullName>
        <active>true</active>
        <description>HWSDDP-24</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;HWS_Part_Service_Fee&apos;,
ISBLANK(HWS_Product__c)
)</errorConditionFormula>
        <errorMessage>Product cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HWS_ValidateReadonly</fullName>
        <active>true</active>
        <description>HWSDDP-24</description>
        <errorConditionFormula>AND( 
    NOT(ISBLANK(HWS_Product__c)),
    NOT(ISBLANK(HWS_OrderCode__c)),
        OR( 
        ISCHANGED(HWS_OrderCode__c), 
        ISCHANGED(HWS_Product__c ), 
        ISCHANGED(CurrencyIsoCode)
	
       ) 
)</errorConditionFormula>
        <errorMessage>The Product, Order Code and Currency cannot be changed</errorMessage>
    </validationRules>
</CustomObject>